[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "isrsa-pipeline"
version = "0.1.0"
description = "Inter-Subject Representational Similarity Analysis pipeline for naturalistic fMRI."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name"}]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
